Premium (#1)
* fixed offensive stats not getting placeholders registered

* Update README.md

* possible fix to valhalla breaking custom vault loot tables

* possible fix to valhalla breaking custom vault loot tables

* Fixed permission bug and added MythicMobs hook.

* largely implemented custom trading mechanics and started implementing a skill for it

* bleed resistance now cached, weapon skills cannot be exploited with iron golems any more, max stack size modifier tweaked, permission stat source fixed

* added ordering, trading stuff, happiness sources, gifting, services, etc.

* Fixed vector finiteness error. Added httpedor's mythicmobs hook

* tons of optimizations (thanks to JustAHuman-xD and casperwtf)

* updated language file with some more premium content material

* improved modifier API

* adjustments to modifier api changes

* Update README.md

* eyeblossom fix

* Update README.md

* added trading skill command

* fixed stats on items being ignored if it needs no weight filter

* fixed stats on items being ignored if it needs no weight filter

* spring cleaning

* added some cool new modifiers

* should be final modifier api changes

* should be final modifier api changes

* should be final modifier api changes

* should be final modifier api changes

* ordering should be more or less finished now

* itembuilder update

* itembuilder update

* service api update

* UOE with itembuilder resolved

* CME fix with entitycache

* itembuilder bug fix

* itembuilder bug fix

* bunch of merchant fixes

* fixed really bad amplifier bug causing all potion effect amplifiers to be amplified by 20x

* added raw stat source placeholder

* Replaced giftable (boolean) with giftweight (float) for more control over gift rarity

* Replaced giftable (boolean) with giftweight (float) for more control over gift rarity

---------

Co-authored-by: Athlaeos <athlaeosbuilds@gmail.com>
Co-authored-by: Athlaeos <35800803+Athlaeos@users.noreply.github.com>
Co-authored-by: RFSMassac